test: make Step 22 Android RED harness Java-compatible